Show trending list horizontally
Reloading list when range (day or week) is changed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./app/src/App.js" type="module"></script>
+    <script src="./app.js" type="module"></script>
 </head>
 <body>
-   <mdb-app></mdb-app> 
+    <tmdb-trending-list data-range="day"></tmdb-trending-list>
 </body>
 </html>
