Showing popular list (movies and TV shows)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./app.js" type="module"></script>
 </head>
 <body>
-    <tmdb-trending-list data-range="day"></tmdb-trending-list>
+    <tmdb-trending-list></tmdb-trending-list>
+<!--    <tmdb-latests-trailers></tmdb-latests-trailers>-->
+    <tmdb-popular-list></tmdb-popular-list>
 </body>
 </html>
