Showing 'free to watch' list (movies and TV shows)

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <tmdb-trending-list></tmdb-trending-list>
 <!--    <tmdb-latests-trailers></tmdb-latests-trailers>-->
     <tmdb-popular-list></tmdb-popular-list>
+    <tmdb-free-to-watch-list></tmdb-free-to-watch-list>
 </body>
 </html>
