Using Carbon Design System from IBM

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Database</title>
     <script src="./app.js" type="module"></script>
+    <script type="module" src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/version/v1.35.0/back-to-top.min.js"></script>
+    <script type="module" src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/version/v1.35.0/card.min.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <tmdb-trending-list></tmdb-trending-list>
