changing to cargon 11

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Database</title>
-    <script src="./app.js" type="module"></script>
-    <script type="module" src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/version/v1.35.0/back-to-top.min.js"></script>
-    <script type="module" src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/version/v1.35.0/card.min.js"></script>
+    <script src="./index.js" type="module"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <cds-tile>teste</cds-tile>
     <tmdb-trending-list></tmdb-trending-list>
 <!--    <tmdb-latests-trailers></tmdb-latests-trailers>-->
     <tmdb-popular-list></tmdb-popular-list>
