Add page header

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,25 @@
     <script src="./index.js" type="module"></script>
 </head>
 <body>
-    
-    <tmdb-trending-list></tmdb-trending-list>
-<!--    <tmdb-latests-trailers></tmdb-latests-trailers>-->
-    <tmdb-popular-list></tmdb-popular-list>
-    <tmdb-free-to-watch-list></tmdb-free-to-watch-list>
+    <cds-header aria-label="IBM Platform Name">
+        <cds-header-menu-button button-label-active="Close menu"
+            button-label-inactive="Open menu"></cds-header-menu-button>
+        <cds-header-name href="javascript:void 0" prefix="IBM">[Platform]</cds-header-name>
+        <cds-header-nav menu-bar-label="IBM [Platform]">
+            <cds-header-nav-item href="javascript:void 0">Link 1</cds-header-nav-item>
+            <cds-header-nav-item href="javascript:void 0">Link 2</cds-header-nav-item>
+            <cds-header-nav-item href="javascript:void 0">Link 3</cds-header-nav-item>
+            <cds-header-menu menu-label="Link 4" trigger-content="Link 4">
+                <cds-header-menu-item href="javascript:void 0">Sub-link 1</cds-header-menu-item>
+                <cds-header-menu-item href="javascript:void 0">Sub-link 2</cds-header-menu-item>
+                <cds-header-menu-item href="javascript:void 0">Sub-link 3</cds-header-menu-item>
+            </cds-header-menu>
+        </cds-header-nav>
+    </cds-header>
+    <div style="margin-top: 48px;">
+        <tmdb-trending-list></tmdb-trending-list>
+        <tmdb-popular-list></tmdb-popular-list>
+        <tmdb-free-to-watch-list></tmdb-free-to-watch-list>
+    </div>
 </body>
 </html>
