--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 </header>
 <main style="width: 100%; display: flex; justify-content: center">
     <div style="margin-top: 62px; max-width: 1300px">
-        <tmdb-trending-list></tmdb-trending-list>
-        <tmdb-popular-list></tmdb-popular-list>
-        <tmdb-free-to-watch-list></tmdb-free-to-watch-list>
+        <tmdb-main-page></tmdb-main-page>
     </div>
 </main>
 </body>
