wip: add movie details component

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ body > main {
 }
 </style>
 <main>
-        <tmdb-main-page class="cds--css-grid"></tmdb-main-page>
+    <tmdb-movie-details id='696506'></tmdb-movie-details>
+    <tmdb-main-page class="cds--css-grid"></tmdb-main-page>
 </main>
 </body>
 </html>
