--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body > main {
 }
 </style>
 <main>
-    <tmdb-movie-details id='696506'></tmdb-movie-details>
+    <tmdb-movie-details class="cds--css-grid" id='696506'></tmdb-movie-details>
     <tmdb-main-page class="cds--css-grid"></tmdb-main-page>
 </main>
 </body>
