Fix movie list sections

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 body > main {
     padding-top: 50px;
 }
+
+tmdb-router > * {
+    grid-column: 1/-1;
+}
 </style>
 <main>
-    <tmdb-router></tmdb-router>
+    <tmdb-router class="page page-landing cds--css-grid"></tmdb-router>
 </main>
 </body>
 </html>
